@@ -40,7 +40,8 @@ class Nodes:
                     so 12.34.0.0/16 would be written as 12.34
                 A request for 1.2.3.0/24, 192.168.0.0/16, and 21.0.0.0/8
                     would be "1.2.3,192.168,21"
-        :return: A list of the child-nodes of each of the given addresses.
+        :return: A dictionary where the keys are the supplied addresses (or _ if no address)
+            and the values are a list of child nodes.
         """
         web.header("Content-Type", "application/json")
         get_data = web.input()
